# rodin

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: docker-ghcr.yml
scripts/pandoc/: code-lang.lua  html-to-md.lua  noimg.lua  short-hr.lua  strip-prose.lua
src/: app.rs  asset.rs  components.rs  frontmatter.rs  logging.rs  main.rs
src/app/: handlers.rs  render.rs  state.rs
src/components/: search.rs
static/: app.js  critical.css  custom.css  home.js  input.css  lazy.css  preamble.typ  prose.css  robots.txt  search.css  tailwind-fallback.css  test.css  twitter.js
static/css/: blog-list.css  critical.css  post-card.css  prose-base.css  prose-full.css  prose.css  search.css
static/images/urumashi/: urumashi-1280-low.avif  urumashi-1280.avif  urumashi-1920-low.avif  urumashi-1920.avif  urumashi-2560-low.avif  urumashi-2560.avif
static/root/: id_ed25519_github.pub  pgp-public-key.asc  pgp-public-key.gpg  pgp-signature.txt  pgp-signature.txt.asc  robots.txt
