# Cargo.toml
[package]
name = "rodin"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "rodin"

[[bin]]
name = "rodin-content"
path = "src/bin/rodin_content.rs"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
leptos = { version = "0.8.14", default-features = false, features = ["ssr"] }
leptos_axum = "0.8.7"
minify-html = "0.18.1"
rand = "0.9.2"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5.2", features = ["tokio", "util"] }
tower-http = { version = "0.6", features = ["fs", "compression-br", "compression-gzip"] }
typst-as-lib = { version = "0.15.0", features = ["typst-kit-fonts", "typst-kit-embed-fonts", "typst-html"] }
typst-html = "0.14.0"
typst-library = "0.14.0"
futures = "0.3"

[build-dependencies]
anyhow = "1.0.100"
hb-subset = "0.3.0"
lightningcss = { version = "1.0.0-alpha.68", features = ["browserslist"] }
minify-html = "0.18.1"
regex = "1.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
typst = "0.14.0"
typst-as-lib = { version = "0.15.0", features = ["typst-kit-fonts", "typst-kit-embed-fonts", "typst-html"] }
typst-html = "0.14.0"
typst-library = "0.14.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = "symbols"
